changed about section from boba to best

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
             <p class="bikofont">CONGRATS to these shops. The boba community had voted them for:</p>
             <ul style="list-style: none;">
                 <li class="bikofont">Best Boba - Bar Code</li>
-                <li class="bikofont">Boba Milk Tea - Soyful Desserts</li>
+                <li class="bikofont">Best Milk Tea - Soyful Desserts</li>
                 <li class="bikofont">Fan Favorite - Super Cue Café</li>
             </ul>
             <p class="bikofont">Shout out to Ice Husky for sharing their delicious Taiwanese frozen dessert shaved ice at
