remove proceeds to akpsi

--- a/about.html
+++ b/about.html
@@ -72,9 +72,8 @@
                 are finally making a comeback. This year, guests will be able to purchase a ticket for UNLIMITED access to
                 milk tea samples.
             </p>
-            <p class="bikofont">Aside from being a food festival, this is also a philanthropic event. Half of the proceeds
-                goes to Water 1st International that helps provide clean water for people all over the world. The other half
-                of the proceeds goes towards a Scholarship for Future Business Professionals. It is our ambition that the
+            <p class="bikofont">Aside from being a food festival, this is also a philanthropic event. The proceeds
+                go to Water 1st International that helps provide clean water for people all over the world. It is our ambition that the
                 Annual Boba Festival not only serves as a vessel to come together, but also an opportunity to give back to
                 the community.</p>
             <p class="bikofont">Follow us @bobafestival on Instagram and Twitter for more updates, raffles, and giveaways!</p>
