added details to ticket sales

--- a/ticket.html
+++ b/ticket.html
@@ -53,11 +53,13 @@
                 <div class="card-body">
                     <h5 class="card-title bikofont">Purchase Your Tickets!</h5>
                     <h6 class="card-subtitle mb-2 text-muted bikofont">Pricing Info:</h6>
-                    <ul style="padding: 20px;">
+                    <ul style="padding: 15px;">
                         <li class="bikofont">Early Bird Sale: $15</li>
                         <li class="bikofont">Early Bird Sale+Mason Jar: $25</li>
                         <li class="bikofont">General Admission: $25</li>
                     </ul>
+                    <p class="bikofont"><i>Both early bird and general admission tickets give unlimited boba sampling while supplies last.</i></p>
+                    <p class="bikofont"><i>Kids 6 and under are free!</i></p>
                     <div class="purchasebuttoncontainer">
                         <a href="https://www.eventbrite.com/e/boba-festival-2018-tickets-48151846469" class="card-link btn btn-primary" target="_blank"
                             style="background-color: #7dc4c8;; border: none; margin: 0 auto; display: block;">Purchase
